--- a/.env
+++ b/.env
@@ -1,5 +1,9 @@
-DB_HOST= localhost
-DB_USER= root
-DB_PASSWORD= 0712400421
-DB_NAME= expense_traker
-PORT=3000
+MYSQLDATABASE="${{MYSQL_DATABASE}}"
+MYSQLHOST=junction.proxy.rlwy.net:54417
+MYSQLPASSWORD=WpdpvMdmHMNRJMZxAuFyniZBwdNYaJmC
+MYSQLPORT=3306
+MYSQLUSER=root
+MYSQLDATABASE=railway
+MYSQL_PUBLIC_URL="mysql://${{MYSQLUSER}}:${{MYSQL_ROOT_PASSWORD}}@${{RAILWAY_TCP_PROXY_DOMAIN}}:${{RAILWAY_TCP_PROXY_PORT}}/${{MYSQL_DATABASE}}"
+MYSQL_ROOT_PASSWORD="WpdpvMdmHMNRJMZxAuFyniZBwdNYaJmC"
+MYSQL_URL="mysql://${{MYSQLUSER}}:${{MYSQL_ROOT_PASSWORD}}@${{RAILWAY_PRIVATE_DOMAIN}}:3306/${{MYSQL_DATABASE}}"
