--- a/.env
+++ b/.env
@@ -4,6 +4,6 @@ MYSQLPASSWORD=WpdpvMdmHMNRJMZxAuFyniZBwdNYaJmC
 MYSQLPORT=3306
 MYSQLUSER=root
 MYSQLDATABASE=railway
-MYSQL_PUBLIC_URL="mysql://${{MYSQLUSER}}:${{MYSQL_ROOT_PASSWORD}}@${{RAILWAY_TCP_PROXY_DOMAIN}}:${{RAILWAY_TCP_PROXY_PORT}}/${{MYSQL_DATABASE}}"
-MYSQL_ROOT_PASSWORD="WpdpvMdmHMNRJMZxAuFyniZBwdNYaJmC"
-MYSQL_URL="mysql://${{MYSQLUSER}}:${{MYSQL_ROOT_PASSWORD}}@${{RAILWAY_PRIVATE_DOMAIN}}:3306/${{MYSQL_DATABASE}}"
+MYSQL_PUBLIC_URL=mysql://${{MYSQLUSER}}:${{MYSQL_ROOT_PASSWORD}}@${{RAILWAY_TCP_PROXY_DOMAIN}}:${{RAILWAY_TCP_PROXY_PORT}}/${{MYSQL_DATABASE}}
+MYSQL_ROOT_PASSWORD=WpdpvMdmHMNRJMZxAuFyniZBwdNYaJmC
+MYSQLURL=mysql://<MYSQLUSER>:<MYSQLPASSWORD>@<MYSQLHOST>:<MYSQLPORT>/<MYSQLDATABASE>
