--- a/.env
+++ b/.env
@@ -1,9 +1,6 @@
-MYSQLDATABASE="${{MYSQL_DATABASE}}"
-MYSQLHOST=junction.proxy.rlwy.net:54417
-MYSQLPASSWORD=WpdpvMdmHMNRJMZxAuFyniZBwdNYaJmC
-MYSQLPORT=3306
+MYSQLHOST=junction.proxy.rlwy.net
+MYSQLPORT=54417
 MYSQLUSER=root
+MYSQLPASSWORD=WpdpvMdmHMNRJMZxAuFyniZBwdNYaJmC
 MYSQLDATABASE=railway
-MYSQL_PUBLIC_URL=mysql://${{MYSQLUSER}}:${{MYSQL_ROOT_PASSWORD}}@${{RAILWAY_TCP_PROXY_DOMAIN}}:${{RAILWAY_TCP_PROXY_PORT}}/${{MYSQL_DATABASE}}
-MYSQL_ROOT_PASSWORD=WpdpvMdmHMNRJMZxAuFyniZBwdNYaJmC
-MYSQLURL=mysql://<MYSQLUSER>:<MYSQLPASSWORD>@<MYSQLHOST>:<MYSQLPORT>/<MYSQLDATABASE>
+MYSQLURL=mysql://${MYSQLUSER}:${MYSQLPASSWORD}@${MYSQLHOST}:${MYSQLPORT}/${MYSQLDATABASE}
