--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ MYSQLPORT=54417
 MYSQLUSER=root
 MYSQLPASSWORD=WpdpvMdmHMNRJMZxAuFyniZBwdNYaJmC
 MYSQLDATABASE=railway
-MYSQLURL=mysql://${MYSQLUSER}:${MYSQLPASSWORD}@${MYSQLHOST}:${MYSQLPORT}/${MYSQLDATABASE}
+MYSQLURL=mysql://root:WpdpvMdmHMNRJMZxAuFyniZBwdNYaJmC@junction.proxy.rlwy.net:54417/railway
