--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ MYSQLUSER=root
 MYSQLPASSWORD=WpdpvMdmHMNRJMZxAuFyniZBwdNYaJmC
 MYSQLDATABASE=railway
 MYSQLURL=mysql://root:WpdpvMdmHMNRJMZxAuFyniZBwdNYaJmC@junction.proxy.rlwy.net:54417/railway
+
+NEW VARIABLE
